fixed box overflowing

--- a/app/components/JasonTest.scss
+++ b/app/components/JasonTest.scss
@@ -1,3 +1,8 @@
+
 .Album {
   // float: 'left';
+  img {
+    max-width: 100%;
+    max-height:100%;
+  }
 }
